[gd_scene load_steps=2 format=3 uid="uid://84jpjb4sa18h"]

[ext_resource type="Script" uid="uid://60wf1o7tsimd" path="res://Managers/Debuger/debug_flags_panel.gd" id="1_xi8mp"]

[node name="DebugFlagsPanel" type="Control"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_bottom = 120.0
grow_horizontal = 0
script = ExtResource("1_xi8mp")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 4

[node name="FlagsLabel" type="RichTextLabel" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 18
fit_content = true

[node name="IdsScroll" type="ScrollContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="IdsLabel" type="RichTextLabel" parent="Panel/VBoxContainer/IdsScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
fit_content = true

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="GotoInput" type="LineEdit" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
placeholder_text = "start"
keep_editing_on_text_submit = true

[node name="GotoButton" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "Goto"
